--- a/UI Day1/style.css
+++ b/UI Day1/style.css
@@ -1,8 +1,8 @@
 .container {
   box-sizing: border-box;
-  padding: 40px;
-  width: 650px;
-  margin: 30vh auto;
+  padding: 20px;
+  max-width: 800px;
+  margin: 50px auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,12 +10,33 @@
   border: 1px solid grey;
   box-shadow: 10px 10px 20px #d5d5d5, -10px -10px 20px #d5d5d5;
 }
-.one,
-.two,
-.three {
+.billing-details {
   display: grid;
-  justify-content: start;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  padding: 5px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding-left: 20px;
+}
+.submit {
+  /* margin: 10px 20px;
+  grid-column: span 2;
+  padding: 5px; */
+margin-left: 20px;
+  grid-column: span 2; /* Center the button */
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+/* .form,
+.full-width {
+  grid-column: span2;
+} */
