--- a/UI Day1/style.css
+++ b/UI Day1/style.css
@@ -2,41 +2,59 @@
   box-sizing: border-box;
   padding: 20px;
   max-width: 800px;
-  margin: 50px auto;
+  margin: 150px auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border: 1px solid grey;
+  border-radius: 15px;
   box-shadow: 10px 10px 20px #d5d5d5, -10px -10px 20px #d5d5d5;
+  background-color: antiquewhite;
+  background: linear-gradient(to right, #d3cce3, #e9e4f0);
 }
 .billing-details {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 10;
+}
+
+label {
+  margin-top: 20px;
+  /* margin-bottom: 5px; */
+  font-weight: bold;
+  color: #555;
+}
+
+input,
+select,
+textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 14px;
+  width: 100%;
 }
 
 .form {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
-  gap: 5px;
-  padding-left: 20px;
+  gap: 10px;
+  margin-left: 20px;
 }
 .submit {
   /* margin: 10px 20px;
   grid-column: span 2;
   padding: 5px; */
-margin-left: 20px;
+  margin-left: 20px;
   grid-column: span 2; /* Center the button */
   padding: 10px 15px;
-  background-color: #007bff;
+  background-color: #767d85;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
   margin-top: 10px;
-/* .form,
-.full-width {
-  grid-column: span2;
-} */
+}
